[package]
name = "ego-tree"
version = "0.1.1"

description = "Vec-backed mutable tree"
keywords = ["tree", "vec", "id", "index"]

authors = ["Curtis McEnroe <programble@gmail.com>"]
license = "ISC"

documentation = "https://cmcenroe.me/ego-tree/ego_tree"
repository = "https://github.com/programble/ego-tree"
readme = "README.md"
