[package]
name = "ego-tree"
edition = "2021"
version = "0.8.0"
description = "Vec-backed ID-tree"
keywords = ["tree", "vec", "id", "index"]
authors = [
    "June McEnroe <june@causal.agency>",
    "Carlo Federico Vescovo <vescovocarlofederico@gmail.com>",
]
license = "ISC"
repository = "https://github.com/rust-scraper/ego-tree"
readme = "README.md"
